--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "firebase": "^9.5.0",
+    "fontawesome": "^5.6.3",
     "fs": "0.0.1-security",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
